Fix field collapse for new items

--- a/Resources/public/css/content-type.css
+++ b/Resources/public/css/content-type.css
@@ -18,3 +18,7 @@
 .btn-add-field {
     margin-top: 25px;
 }
+.acb-collection-element {
+    border: 1px solid #ddd;
+    padding: 5px;
+}
